# gpt-j-6B-tensorrt-int8

./: README.md  demo.ipynb  pyproject.toml  requirements.txt
utils/: engine.py  test.py  trt_model.py
